api version incremented
url updated to https, documentation created
